# SimpleCode

./: .gitignore  LICENSE  README.md  SIMPLECODE.md  config.example.yaml  pyproject.toml  run-simplecode.bat  使用说明.md
.github/workflows/: ci.yml
simplecode/: __main__.py  agent.py  app.py  client.py  config.py  conversation.py  permission_dialog.py  plan_dialog.py  prompts.py  remote.py  serialization.py  session_dialog.py  teammate_tree.py  validator.py  web_content.py
simplecode/agents/: __init__.py  fork.py  loader.py  notification.py  parser.py  task_manager.py  tool_filter.py
simplecode/commands/: __init__.py  loader.py  parser.py
simplecode/context/: __init__.py  manager.py
simplecode/filehistory/: __init__.py  history.py
simplecode/hooks/: __init__.py  conditions.py  engine.py  executors.py  loader.py  models.py
simplecode/mcp/: __init__.py  client.py  manager.py  tool_wrapper.py
simplecode/memory/: __init__.py  auto_memory.py  instructions.py  recall.py  session.py
simplecode/permissions/: __init__.py  checker.py  modes.py  sandbox.py
simplecode/sandbox/: bwrap.py  seatbelt.py
simplecode/skills/: __init__.py  executor.py  loader.py
simplecode/teams/: __init__.py  backend_detect.py  coordinator.py  manager.py  models.py  (+4 more)
tests/: test_agent.py  test_commands.py  test_context.py  test_context_window.py  test_hooks.py  test_mcp.py  test_memory.py  test_permissions.py  test_recovery.py  test_replacement_state.py  test_serialization.py  test_skills.py  test_subagent.py  test_teams.py  test_tool_search.py  test_worktree.py  verify_subagent.py
(+46 files in other folders)
