[project]
name = "simplecode"
version = "0.3.0"
description = "A terminal AI coding assistant"
requires-python = ">=3.11"
dependencies = [
    "textual>=2.1.0",
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "mcp>=1.12.0",
    "httpx>=0.27.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
# 开发/测试依赖：pip install ".[dev]"
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
simplecode = "simplecode.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["simplecode"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

# uv 用的依赖组（与上面的 optional-dependencies.dev 等价，供 `uv sync` 使用）
[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
